Added new references

--- a/articles.bib
+++ b/articles.bib
@@ -2585,6 +2585,25 @@
   file = {/Users/mavi/Zotero/storage/R685PIPS/Mendoza Beltran et al. - 2022 - Mapping direct N2O emissions from peri-urban agric.pdf;/Users/mavi/Zotero/storage/AXBDE9R3/S0048969722006064.html}
 }
 
+@article{merdinogluBreedingDurableResistance2018,
+  title = {Breeding for Durable Resistance to Downy and Powdery Mildew in Grapevine},
+  author = {Merdinoglu, Didier and Schneider, Christophe and Prado, Emilce and Wiedemann-Merdinoglu, Sabine and Mestre, Pere},
+  date = {2018-08-02},
+  journaltitle = {OENO One},
+  volume = {52},
+  number = {3},
+  pages = {203--209},
+  issn = {2494-1271},
+  doi = {10.20870/oeno-one.2018.52.3.2116},
+  url = {https://oeno-one.eu/article/view/2116},
+  urldate = {2023-12-01},
+  abstract = {The current strategy to control grapevine downy and powdery mildew relies on chemical treatments. An alternative solution to the use of chemicals is the development of varieties resistant to pathogens. Several genetic factors derived from Vitis species closely related to cultivated grapevine and conferring protection against downy mildew or powdery mildew have already been identified. Nevertheless, many major resistance genes have been overcome by virulent strains of pathogens in various plant-pathogen interactions, and such resistance breakdowns have already been described in grapevine. Resistance genes are a limited resource, and their introduction in a new variety is a long-term and costly process. This is why the assessment and improvement of resistance durability is crucial, particularly in the case of a perennial species. The Inra-ResDur breeding program aims at creating varieties with durable resistance to downy and powdery mildew. The pyramiding strategy employed to limit the risk of resistance breakdown is described. Other innovative ways are proposed to enhance resistance durability.},
+  issue = {3},
+  langid = {english},
+  keywords = {breeding,durability,genetics,grapevine,resistance},
+  file = {/Users/mavi/Zotero/storage/5PE5TKY3/Merdinoglu et al_2018_Breeding for durable resistance to downy and powdery mildew in grapevine.pdf}
+}
+
 @online{miliotoRealtimeSemanticSegmentation2018,
   title = {Real-Time {{Semantic Segmentation}} of {{Crop}} and {{Weed}} for {{Precision Agriculture Robots Leveraging Background Knowledge}} in {{CNNs}}},
   author = {Milioto, Andres and Lottes, Philipp and Stachniss, Cyrill},
@@ -2712,6 +2731,15 @@
   langid = {english},
   keywords = {read,REview},
   file = {/Users/mavi/Zotero/storage/Y6BIDSSU/Noon et al. - 2020 - Use of deep learning techniques for identification.pdf}
+}
+
+@book{OIVDescriptorList2009,
+  title = {{{OIV}}. {{Descriptor List}} for {{Grape Varieties}} and {{Vitis Species}}, 2nd Ed.},
+  date = {2009},
+  publisher = {{OIV Paris}},
+  url = {https://www.oiv.int/public/medias/2274/code-2e-edition-finale.pdf},
+  urldate = {2023-05-16},
+  file = {/Users/mavi/Zotero/storage/KCH452B2/code-2e-edition-finale.pdf}
 }
 
 @article{ojeda-martinezSavingTimeMaintaining2020,
@@ -3914,6 +3942,27 @@
   pubstate = {preprint},
   keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
   file = {/Users/mavi/Zotero/storage/L83DU3W5/Tolstikhin et al. - 2019 - Wasserstein Auto-Encoders.pdf;/Users/mavi/Zotero/storage/6CSANCP5/1711.html}
+}
+
+@article{topferCoolClimatePerspective2022,
+  title = {A Cool Climate Perspective on Grapevine Breeding: Climate Change and Sustainability Are Driving Forces for Changing Varieties in a Traditional Market},
+  shorttitle = {A Cool Climate Perspective on Grapevine Breeding},
+  author = {Töpfer, Reinhard and Trapp, Oliver},
+  date = {2022-11},
+  journaltitle = {TAG. Theoretical and applied genetics. Theoretische und angewandte Genetik},
+  shortjournal = {Theor Appl Genet},
+  volume = {135},
+  number = {11},
+  eprint = {35389053},
+  eprinttype = {pmid},
+  pages = {3947--3960},
+  issn = {1432-2242},
+  doi = {10.1007/s00122-022-04077-0},
+  abstract = {A multitude of diverse breeding goals need to be combined in a new cultivar, which always forces to compromise. The biggest challenge grapevine breeders face is the extraordinarily complex trait of wine quality, which is the all-pervasive and most debated characteristic. Since the 1920s, Germany runs continuous grapevine breeding programmes. This continuity was the key to success and lead to various new cultivars on the market, so called PIWIs. Initially, introduced pests and diseases such as phylloxera, powdery and downy mildew were the driving forces for breeding. However, preconceptions about the wine quality of new resistant selections impeded the market introduction. These preconceptions are still echoing today and may be the reason in large parts of the viticultural community for: (1) ignoring substantial breeding progress, and (2) sticking to successful markets of well-known varietal wines or blends (e.g. Chardonnay, Cabernet Sauvignon, Riesling). New is the need to improve viticulture´s sustainability and to adapt to changing environmental conditions. Climate change with its extreme weather will impose the need for a change in cultivars in many wine growing regions. Therefore, a paradigm shift is knocking on the door: new varieties (PIWIs) versus traditional varieties for climate adapted and sustainable viticulture. However, it will be slow process and viticulture is politically well advised to pave the way to variety innovation. In contrast to the widely available PIWIs, competitive cultivars created by means of new breeding technologies (NBT, e.g. through CRISPR/Cas) are still decades from introduction to the market.},
+  langid = {english},
+  pmcid = {PMC9729149},
+  keywords = {Climate Change,Germany},
+  file = {/Users/mavi/Zotero/storage/WHYACQTX/Töpfer_Trapp_2022_A cool climate perspective on grapevine breeding.pdf}
 }
 
 @article{torunoPlantPathogenEffectorsCellular2016,
