Before updating bib

--- a/manual.bib
+++ b/manual.bib
@@ -31,3 +31,11 @@
   publisher = {CreateSpace},
   address = {Scotts Valley, CA},
 }
+
+@software{gimp,
+  author = {{The GIMP Development Team}},
+  title = {GIMP},
+  url = {https://www.gimp.org},
+  version = {2.10.12},
+  date = {2019-06-12},
+}
